# text-file-sort

./: CLAUDE.md  Cargo.toml  MAINTENANCE_WORKFLOW.md  README.md
benches/: text_file.rs
benches/results/macbook/: large-files-1-tasks-cm.csv  large-files-1-tasks.csv  large-files-2-tasks-cm.csv  large-files-2-tasks.csv  large-files-4-tasks-cm.csv  large-files-4-tasks.csv  large-files-8-tasks-cm.csv  large-files-8-tasks.csv  medium-files-1-tasks-cm.csv  medium-files-1-tasks.csv  medium-files-2-tasks-cm.csv  medium-files-2-tasks.csv  medium-files-4-tasks-cm.csv  medium-files-4-tasks.csv  medium-files-8-tasks-cm.csv  medium-files-8-tasks.csv  small-files-1-tasks-cm.csv  small-files-1-tasks.csv  small-files-2-tasks-cm.csv  small-files-2-tasks.csv  small-files-4-tasks-cm.csv  small-files-4-tasks.csv  small-files-8-tasks-cm.csv  small-files-8-tasks.csv  text-file-sort.json
examples/: sort_text_file.rs
src/: chunk_iterator.rs  config.rs  field.rs  field_type.rs  key.rs  lib.rs  line_record.rs  order.rs  sort.rs  sort_command.rs  sorted_chunk_file.rs  unmerged_chunk_file.rs
tests/: test_check.rs  test_merge.rs  test_parallel_sort.rs  test_prefix_sufix.rs
tests/common/: mod.rs
