[package]
name = "text-file-sort"
authors = ["Giora Kosoi"]
license = "MIT OR Apache-2.0"
description = "Sort a text file similar to linux sort"
homepage = "https://www.navigatorsguild.io/"
repository = "https://github.com/navigatorsguild/text-file-sort"
readme = "README.md"
keywords = ["text", "file", "sort", "algorithm", "external"]
categories = ["algorithms"]
edition = "2021"
version = "0.2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
regex = "1.10"
tempfile = "3.4"
anyhow = "1.0"
log = "0.4"
simple_logger = "4.1"
rlimit = "0.10"
command-executor = "0.1"
rand = "0.8"
data-encoding = "2.3"
num_cpus = "1.15"

[dev-dependencies]
benchmark-rs = "0.1"
tikv-jemallocator = "0.5"
